--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "nodemailer": "0.3.35",
     "net-ping":  "1.1.7",
     "js-yaml": "2.1.0",
-    "webpagetest": "0.2.0"
+    "webpagetest": "0.2.0",
+    "request": "2.58.0 ",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "mocha": "1.7.x",
