--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,10 +1,6 @@
 url: 'http://localhost:8082'
 
 mongodb:
-  server:   localhost
-  database: uptime
-  user:     root 
-  password:
   connectionString:       "mongodb://localhost:27017/uptime"# alternative to setting server, database, user and password separately
 
 monitor:
@@ -23,40 +19,10 @@ autoStartMonitor: true
 
 plugins:
   - ./plugins/console
-  # - ./plugins/patternMatcher
-  # - ./plugins/httpOptions
   - ./plugins/geckoboard
-  # - ./plugins/email
-  # - ./plugins/basicAuth
-
-email:
-  method:      SMTP  # possible methods are SMTP, SES, or Sendmail
-  transport:         # see https://github.com/andris9/nodemailer for transport options
-    service:   Gmail # see https://github.com/andris9/Nodemailer/blob/master/lib/wellknown.js for well-known services
-    auth:            
-      user:          # The email account username, e.g. 'username@gmail.com'
-      pass:          # The email account password, e.G. 'password'
-  event:
-    up:        true
-    down:      true
-    paused:    false
-    restarted: false
-  message:           
-    from:            # The message sender, e.g. 'Fred Foo <foo@blurdybloop.com>'
-    to:              # The message recipient, e.g. 'bar@blurdybloop.com, baz@blurdybloop.com'
-  # The email plugin also uses the main `url` param for hyperlinks in the sent emails
-
-basicAuth:
-  username:    admin
-  password:    password
-verbose: true # only used in dev
-
-webPageTest:
-  server: 'http://www.webpagetest.org'
-  key:
-  testOptions:
-
+  - ./plugins/pagerduty
+  
 geckoboard:
-  api_key: 
+  api_key: < geckoboard API key >
   reporting_interval: 60 # in seconds
-  update_ts_widget_url:  # url of a text widget to publish a 'last updated' message
+  update_ts_widget_url: < geckoboard text widget url for last update > # url of a text widget to publish a 'last updated' message
