--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "js-yaml": "2.1.0",
     "webpagetest": "0.2.0",
     "request": "2.58.0 ",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "pagerduty": "0.0.3"
   },
   "devDependencies": {
     "mocha": "1.7.x",
