--- a/config/default.yaml
+++ b/config/default.yaml
@@ -20,9 +20,13 @@ autoStartMonitor: true
 plugins:
   - ./plugins/console
   - ./plugins/geckoboard
-  # - ./plugins/pagerduty
+  - ./plugins/pagerduty
   
 geckoboard:
   api_key: < geckoboard API key >
   reporting_interval: 60 # in seconds
   update_ts_widget_urls:  # sequence of urls of text widgets to publish a 'last updated' message
+
+pagerduty:
+  serviceKey: <pagerduty-service-key>
+  autoresolve: false
