--- a/config/default.yaml
+++ b/config/default.yaml
@@ -9,6 +9,7 @@ monitor:
   pollingInterval:        10000      # ten seconds
   timeout:                5000       # five seconds
   userAgent:              NodeUptime/3.0 (https://github.com/fzaninotto/uptime)
+  retries:                3
 
 analyzer:
   updateInterval:         60000      # one minute
