remove pagerduty for now

--- a/config/production.yaml
+++ b/config/production.yaml
@@ -18,7 +18,7 @@ autoStartMonitor: true
 plugins:
   - ./plugins/console
   - ./plugins/geckoboard
-  - ./plugins/pagerduty
+  # - ./plugins/pagerduty
   
 geckoboard: # make sure to set 'GECKOBOARD_API_KEY' env variable
   reporting_interval: 60 # in seconds
